View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022506 | Open CASCADE | OCCT:Foundation Classes | public | 2011-05-16 18:55 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | Windows NT | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0022506: Wrong factor for elapsed time mesaured with GetTickCount() in OSD_Timer | ||||
Description | The improvement OCC21724 introduced regression in OSD_Timer when it measures elapsed time with help of GetTickCount() on Windows: the factor used to convert its result to seconds is incorrect (0.000001 instead of 0.001). The attached patch fixes this problem. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
2011-05-16 16:55
|
fix_gettickcount-abv-v1.tar.gz (1,845 bytes) |
|
Dear abv, Fix is integrated into branch 22506. Please, review. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR22506 (and master from occt GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-08-02 11:23 | bugmaster | Category | OCCT:FDC => OCCT:Foundation Classes |
2012-10-26 19:08 |
|
Assigned To | bugmaster => omy |
2012-10-26 19:08 |
|
Status | new => assigned |
2012-10-26 19:09 |
|
Fixed in Version | EMPTY => |
2012-10-26 19:09 |
|
Target Version | => 6.6.0 |
2012-10-26 19:09 |
|
Description Updated | |
2012-11-02 14:00 |
|
Note Added: 0022073 | |
2012-11-02 14:00 |
|
Assigned To | omy => abv |
2012-11-02 14:00 |
|
Status | assigned => resolved |
2012-11-02 14:05 |
|
Note Added: 0022074 | |
2012-11-02 14:05 |
|
Assigned To | abv => bugmaster |
2012-11-02 14:05 |
|
Status | resolved => reviewed |
2012-11-02 15:48 |
|
Assigned To | bugmaster => mkv |
2012-11-06 14:10 |
|
Assigned To | mkv => abv |
2012-11-06 14:10 |
|
Status | reviewed => feedback |
2012-11-06 15:23 |
|
Assigned To | abv => mkv |
2012-11-06 15:33 |
|
Note Added: 0022104 | |
2012-11-06 15:34 |
|
Test case number | => Not needed |
2012-11-06 15:34 |
|
Assigned To | mkv => bugmaster |
2012-11-06 15:34 |
|
Status | feedback => tested |
2012-11-16 13:03 |
|
Changeset attached | => occt master 999c0ca1 |
2012-11-16 13:03 |
|
Assigned To | bugmaster => omy |
2012-11-16 13:03 |
|
Status | tested => verified |
2012-11-16 13:03 |
|
Resolution | open => fixed |
2012-12-10 17:16 |
|
Changeset attached | => occt master 999c0ca1 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |