0022506: Wrong factor for elapsed time mesaured with GetTickCount() in OSD_Timer

Commit details: set the proper factor value.